fixed logo size on mobile

--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ table img {
 		height: 30%;
 		background-color: white;
 	}
-		#logo {
+		#logo img {
 		width: 45%;
 		height: 45%;
 	}
